// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput render it should render 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #606b85;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-0::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with disabled 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-0::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #f8f8f9;
  box-shadow: 0 0 0 1px #e4e7e9;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: not-allowed;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #e4e7e9;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="not-allowed"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      disabled={true}
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with hasError 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-0::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #d61f1f;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #750c0c;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      aria-invalid={true}
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with prefix 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #606b85;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-1::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-1::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-1:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-1::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

.emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #f8f8f9;
  padding: 0.5rem;
  border-right-width: 1px;
  border-right-color: #e4e7e9;
  border-right-style: solid;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    cursor="text"
    display="flex"
    width="100%"
  >
    <div
      className="emotion-0"
      display="flex"
    >
      <div>
        prefix
      </div>
    </div>
    <input
      className="emotion-1 emotion-2"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with readOnly 1`] = `
.emotion-3 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-3 *,
.emotion-3 *::after,
.emotion-3 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-0::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #f8f8f9;
  box-shadow: 0 0 0 1px #606b85;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-2:hover {
  box-shadow: 0 0 0 1px #606b85;
}

.emotion-2:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      aria-readonly={true}
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      readOnly={true}
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`FormInput render it should render with suffix 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #606b85;
  border-radius: 4px;
  -webkit-transition: box-shadow 100ms ease-in;
  transition: box-shadow 100ms ease-in;
  cursor: text;
}

.emotion-3:hover {
  box-shadow: 0 0 0 1px #030b5d;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: transparent;
  outline: none;
  resize: none;
  display: block;
  width: 100%;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-weight: 400;
  color: #282a2b;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  border-radius: 4px;
}

.emotion-0::-webkit-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0::placeholder {
  color: #666a6d;
  font-style: italic;
}

.emotion-0:disabled {
  cursor: not-allowed;
  color: #666a6d;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #f8f8f9;
  padding: 0.5rem;
  border-left-width: 1px;
  border-left-color: #e4e7e9;
  border-left-style: solid;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    cursor="text"
    display="flex"
    width="100%"
  >
    <input
      className="emotion-0 emotion-1"
      id="input"
      onChange={[Function]}
      type="text"
      value="test"
    />
    <div
      className="emotion-2"
      display="flex"
    >
      <div>
        suffix
      </div>
    </div>
  </div>
</div>
`;
